Display/visibility bugs fixed for consistency between IE/FF/Chrome

--- a/oc_platform/assets/sass/_projects_launch.sass
+++ b/oc_platform/assets/sass/_projects_launch.sass
@@ -174,6 +174,7 @@
 
 
         &#projects-invite-background
+            /* Custom IE styling in ie_override.sass */
             background-image: url("../images/projects/earth.jpg")
             background-position: bottom center
             background-repeat: no-repeat
@@ -267,6 +268,10 @@
     textarea
         height: 100px
 
+    label
+        /* Custom IE styling in ie_override.sass */
+        display: none
+
 footer#projects-footer
     background-color: #000
     width: 100%
@@ -286,6 +291,10 @@ a.non-url
         text-decoration: none
 
 
+
+
+/* SASS for invite success page */
+
 .full-page-cover
     width: 100%
     height: 800px
@@ -300,6 +309,10 @@ a.non-url
 
             h2
                 margin: 200px 200px
+
+/* End of SASS for invite success page */
+
+
 
 @-webkit-keyframes bgRise
     0%
