--- a/static/sass/_projects_launch.sass
+++ b/static/sass/_projects_launch.sass
@@ -270,7 +270,7 @@
 
     label
         /* Custom IE styling in ie_override.sass */
-        visibility: hidden
+        display: none
 
 footer#projects-footer
     background-color: #000
