--- a/static/sass/ie-override.sass
+++ b/static/sass/ie-override.sass
@@ -14,7 +14,7 @@
 #projects-signup
 
 	label
-		visibility: visible
+		display: block
 		cursor: text
 		pointer-events: none
 		color: #666
